@@ -524,7 +524,7 @@ COpt::memoryPick();
 		return !empty($objs);
 	}
 
-	protected function checkInput(&$items, $update=false){
+	protected function checkInput(array &$items, $update=false){
 		foreach($items as $inum => $item){
 			$items[$inum]['flags'] = ZBX_FLAG_DISCOVERY;
 		}
@@ -889,15 +889,24 @@ COpt::memoryPick();
 					unset($item['interfaceid']);
 				}
 				elseif (isset($item['type']) && $item['type'] != $exItem['type']) {
-					if ($type = $this->itemTypeInterface($item['type'])) {
-						if (!isset($interfaceids[$type])) {
-							self::exception(ZBX_API_ERROR_PARAMETERS, _s('Cannot find host interface on host "%1$s" for discovery rule key "%2$s".', $host['host'], $item['key_']));
-						}
+					$type = $this->itemTypeInterface($item['type']);
 
-						$item['interfaceid'] = $interfaceids[$type];
+					if ($type == INTERFACE_TYPE_ANY) {
+						foreach (array(INTERFACE_TYPE_AGENT, INTERFACE_TYPE_SNMP, INTERFACE_TYPE_JMX, INTERFACE_TYPE_IPMI) as $itype) {
+							if (isset($interfaceids[$itype])) {
+								$item['interfaceid'] = $interfaceids[$itype];
+								break;
+							}
+						}
+					}
+					elseif ($type === false) {
+						$item['interfaceid'] = 0;
 					}
 					else {
-						$item['interfaceid'] = 0;
+						if (!isset($interfaceids[$type])) {
+							self::exception(ZBX_API_ERROR_PARAMETERS, _s('Cannot find host interface on host "%1$s" for item key "%2$s".', $host['host'], is_null($exItem['key_']) ? $item['key_'] : $exItem['key_']));
+						}
+						$item['interfaceid'] = $interfaceids[$type];
 					}
 				}
 
