@@ -230,6 +230,7 @@ define('INTERFACE_PRIMARY',		1);
 define('INTERFACE_USE_DNS',		0);
 define('INTERFACE_USE_IP',		1);
 
+define('INTERFACE_TYPE_ANY',		-1);
 define('INTERFACE_TYPE_UNKNOWN',	0);
 define('INTERFACE_TYPE_AGENT',		1);
 define('INTERFACE_TYPE_SNMP',		2);
